--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">50</span>/50 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">51</span>/51 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">50</span>/50 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">51</span>/51 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -511,6 +511,17 @@
           correctedText: "Lorsque ce personnage est banni, <mark>vous pouvez choisir un personnage et le bannir</mark>.",
           officialCorrection: "Corrigé sur l’application",
           number: "121/204 · FR · 3",
+        },
+        {
+          filters: "set3 rubis effet impact-oui correction-aucune",
+          name: "Bombardement en piqué !",
+          version: "",
+          sorting: "Bombardement en pique !",
+          image: "images/003_128.jpg",
+          incorrectText: "Bannissez l'un de vos personnages avec Combattant <mark>puis choisissez un personnage ayant moins de <img style=\"width: 1em;\" src=\"images/S.svg\" /> que lui et bannissez-le</mark>.",
+          correctedText: "Bannissez l'un de vos personnages avec Combattant <mark>pour choisir un personnage ayant moins de <img style=\"width: 1em;\" src=\"images/S.svg\" /> que lui et le bannir</mark>.",
+          officialCorrection: "Corrigé sur l’application",
+          number: "128/204 · FR · 3",
         },
         {
           filters: "set3 saphir classification impact-non correction-application",
