--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">51</span>/51 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">52</span>/52 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">51</span>/51 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">52</span>/52 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -689,6 +689,17 @@
           correctedText: "Lorsque vous jouez cet objet, choisissez un personnage qui subit -1 <img style=\"width: 1em;\" src=\"images/S.svg\" /> <mark>pour le reste de ce tour</mark> pour chaque Objet Microrobots que vous avez en jeu.",
           officialCorrection: "Aucune",
           number: "167/204 · FR · 6",
+        },
+        {
+          filters: "set7 amethyste rubis capacite impact-oui correction-aucune",
+          name: "Hadès",
+          version: "Débit d'enfer",
+          sorting: "Hades - Debit d'enfer",
+          image: "images/007_052.png",
+          incorrectText: "Lorsque vous jouez ce personnage, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages<mark>. Si vous le faites, choisissez un personnage coûtant 3 ou moins et bannissez-le</mark>.",
+          correctedText: "Lorsque vous jouez ce personnage, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages <mark>pour choisir un personnage coûtant 3 ou moins et le bannir</mark>.",
+          officialCorrection: "Aucune",
+          number: "52/204 · FR · 7",
         },
       ];
 
