--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">52</span>/52 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">53</span>/53 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">52</span>/52 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">53</span>/53 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -700,6 +700,17 @@
           correctedText: "Lorsque vous jouez ce personnage, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages <mark>pour choisir un personnage coûtant 3 ou moins et le bannir</mark>.",
           officialCorrection: "Aucune",
           number: "52/204 · FR · 7",
+        },
+        {
+          filters: "set7 amethyste rubis capacite impact-oui correction-aucune",
+          name: "Madame Médusa",
+          version: "Amoureuse des diamants",
+          sorting: "Madame Medusa - Amoureuse des diamants",
+          image: "images/007_053.png",
+          incorrectText: "Chaque fois que ce personnage est envoyé à l'aventure, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages<mark>. Si vous le faites, choisissez un joueur, il</mark> place les 3 premières cartes de sa pioche dans sa défausse.",
+          correctedText: "Chaque fois que ce personnage est envoyé à l'aventure, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages<mark>pour choisir un joueur qui</mark> place les 3 premières cartes de sa pioche dans sa défausse.",
+          officialCorrection: "Aucune",
+          number: "53/204 · FR · 7",
         },
       ];
 
