Add Dolores Madrigal - Within Earshot

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">53</span>/53 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">54</span>/54 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">53</span>/53 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">54</span>/54 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -711,6 +711,17 @@
           correctedText: "Chaque fois que ce personnage est envoyé à l'aventure, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages<mark>pour choisir un joueur qui</mark> place les 3 premières cartes de sa pioche dans sa défausse.",
           officialCorrection: "Aucune",
           number: "53/204 · FR · 7",
+        },
+        {
+          filters: "set7 amethyste capacite impact-oui correction-aucune",
+          name: "Dolores Madrigal",
+          version: "À portée d'oreille",
+          sorting: "Dolores Madrigal - A portee d'oreille",
+          image: "images/007_078.png",
+          incorrectText: "Chaque fois <mark>qu'un ou plusieurs de vos personnages chantent</mark> une chanson, choisissez un adversaire qui révèle sa main.",
+          correctedText: "Chaque fois <mark>que l'un de vos personnages chante</mark> une chanson, choisissez un adversaire qui révèle sa main.",
+          officialCorrection: "Aucune",
+          number: "78/204 · FR · 7",
         },
       ];
 
