Update wording of Bodyguard

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
           version: "Mousquetaire",
           sorting: "Dingo - Mousquetaire",
           image: "images/001_004.jpg",
-          incorrectText: "<mark>Lorsqu’il vous défie, un personnage adverse doit</mark>, si possible, choisir l’un de vos personnages avec Rempart.",
-          correctedText: "<mark>Lorsqu’un adversaire défie l’un de vos personnages, il doit</mark>, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il <mark>vous défie</mark>, un personnage adverse doit, <mark>si possible</mark>, choisir l’un de vos personnages avec Rempart.",
+          correctedText: "Lorsqu'il <mark>défie l'un de vos personnages</mark>, un personnage adverse doit, <mark>s'il le peut</mark>, choisir l'un de vos personnages avec Rempart.",
           officialCorrection: "Aucune",
           number: "4/204 · FR · 1",
         },
@@ -146,8 +146,8 @@
           version: "Cheval du palais",
           sorting: "Maximus - Cheval du palais",
           image: "images/001_010.jpg",
-          incorrectText: "<mark>Lorsqu’il vous défie, un personnage adverse doit</mark>, si possible, choisir un de vos personnages avec Rempart.",
-          correctedText: "<mark>Lorsqu’un adversaire défie l’un de vos personnages, il doit</mark>, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il <mark>vous défie</mark>, un personnage adverse doit, <mark>si possible</mark>, choisir un de vos personnages avec Rempart.",
+          correctedText: "Lorsqu'il <mark>défie l'un de vos personnages</mark>, un personnage adverse doit, <mark>s'il le peut</mark>, choisir l'un de vos personnages avec Rempart.",
           officialCorrection: "Aucune",
           number: "10/204 · FR · 1",
         },
@@ -168,8 +168,8 @@
           version: "Lionceau protecteur",
           sorting: "Simba - Lionceau protecteur",
           image: "images/001_020.jpg",
-          incorrectText: "<mark>Lorsqu’il vous défie, un personnage adverse doit</mark>, si possible, choisir l’un de vos personnages avec Rempart.",
-          correctedText: "<mark>Lorsqu’un adversaire défie l’un de vos personnages, il doit</mark>, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il <mark>vous défie</mark>, un personnage adverse doit, <mark>si possible</mark>, choisir l’un de vos personnages avec Rempart.",
+          correctedText: "Lorsqu'il <mark>défie l'un de vos personnages</mark>, un personnage adverse doit, <mark>s'il le peut</mark>, choisir l'un de vos personnages avec Rempart.",
           officialCorrection: "Aucune",
           number: "20/204 · FR · 1",
         },
@@ -289,8 +289,8 @@
           version: "Mousquetaire",
           sorting: "Donald - Mousquetaire",
           image: "images/001_177.jpg",
-          incorrectText: "<mark>Lorsqu’il vous défie, un personnage adverse doit</mark>, si possible, choisir l’un de vos personnages avec Rempart.",
-          correctedText: "<mark>Lorsqu’un adversaire défie l’un de vos personnages, il doit</mark>, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il <mark>vous défie</mark>, un personnage adverse doit, <mark>si possible</mark>, choisir l’un de vos personnages avec Rempart.",
+          correctedText: "Lorsqu'il <mark>défie l'un de vos personnages</mark>, un personnage adverse doit, <mark>s'il le peut</mark>, choisir l'un de vos personnages avec Rempart.",
           officialCorrection: "Aucune",
           number: "177/204 · FR · 1",
         },
@@ -300,8 +300,8 @@
           version: "Vrai héros",
           sorting: "Hercule - Vrai heros",
           image: "images/001_181.jpg",
-          incorrectText: "<mark>Lorsqu’il vous défie, un personnage adverse doit</mark>, si possible, choisir l’un de vos personnages avec Rempart.",
-          correctedText: "<mark>Lorsqu’un adversaire défie l’un de vos personnages, il doit</mark>, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il <mark>vous défie</mark>, un personnage adverse doit, <mark>si possible</mark>, choisir l’un de vos personnages avec Rempart.",
+          correctedText: "Lorsqu'il <mark>défie l'un de vos personnages</mark>, un personnage adverse doit, <mark>s'il le peut</mark>, choisir l'un de vos personnages avec Rempart.",
           officialCorrection: "Aucune",
           number: "181/204 · FR · 1",
         },
@@ -410,8 +410,8 @@
           version: "Brume matinale",
           sorting: "Namaari - Brume matinale",
           image: "images/002_189.jpg",
-          incorrectText: "<mark>Lorsqu’il vous défie, un personnage adverse doit</mark>, si possible, choisir l’un de vos personnages avec Rempart.",
-          correctedText: "<mark>Lorsqu’un adversaire défie l’un de vos personnages, il doit</mark>, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il <mark>vous défie</mark>, un personnage adverse doit, <mark>si possible</mark>, choisir l’un de vos personnages avec Rempart.",
+          correctedText: "Lorsqu'il <mark>défie l'un de vos personnages</mark>, un personnage adverse doit, <mark>s'il le peut</mark>, choisir l'un de vos personnages avec Rempart.",
           officialCorrection: "Aucune",
           number: "189/204 · FR · 2",
         },
@@ -432,8 +432,8 @@
           version: "N’abandonne jamais",
           sorting: "Le Prince - N’abandonne jamais",
           image: "images/002_195.jpg",
-          incorrectText: "<mark>Lorsqu’il vous défie, un personnage adverse doit</mark>, si possible, choisir l’un de vos personnages avec Rempart.",
-          correctedText: "<mark>Lorsqu’un adversaire défie l’un de vos personnages, il doit</mark>, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il <mark>vous défie</mark>, un personnage adverse doit, <mark>si possible</mark>, choisir l’un de vos personnages avec Rempart.",
+          correctedText: "Lorsqu'il <mark>défie l'un de vos personnages</mark>, un personnage adverse doit, <mark>s'il le peut</mark>, choisir l'un de vos personnages avec Rempart.",
           officialCorrection: "Aucune",
           number: "195/204 · FR · 2",
         },
