Add Ratigan - Nefarious Criminal

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">54</span>/54 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">55</span>/55 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">54</span>/54 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">55</span>/55 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -722,6 +722,17 @@
           correctedText: "Chaque fois <mark>que l'un de vos personnages chante</mark> une chanson, choisissez un adversaire qui révèle sa main.",
           officialCorrection: "Aucune",
           number: "78/204 · FR · 7",
+        },
+        {
+          filters: "set7 rubis capacite impact-oui correction-aucune",
+          name: "Ratigan",
+          version: "Criminel néfaste",
+          sorting: "Ratigan - Criminel nefaste",
+          image: "images/007_143.png",
+          incorrectText: "<mark>Chaque fois que vous jouez une action, si ce personnage est épuisé</mark>, gagnez 1 éclat de Lore.",
+          correctedText: "<mark>Tant que ce personnage est épuisé, chaque fois que vous jouez une action</mark>, gagnez 1 éclat de Lore.",
+          officialCorrection: "Aucune",
+          number: "143/204 · FR · 7",
         },
       ];
 
