Add Iago - Reappearing Parrot

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">55</span>/55 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">56</span>/56 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">55</span>/55 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">56</span>/56 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -667,6 +667,17 @@
           correctedText: "Lorsque vous jouez ce personnage, <mark>vous pouvez choisir</mark> un personnage ayant au moins un dommage sur lui et <mark>lui infliger</mark> 2 dommages.",
           officialCorrection: "Corrigé sur l’application",
           number: "74/204 · FR · 5",
+        },
+        {
+          filters: "set6 amethyste classification impact-non correction-application",
+          name: "Iago",
+          version: "Perroquet tenace",
+          sorting: "Iago - Perroquet tenace",
+          image: "images/006_045.jpg",
+          incorrectText: "<mark>Dreamborn</mark> · Allié",
+          correctedText: "<mark>Storyborn</mark> · Allié",
+          officialCorrection: "Corrigé sur l’application",
+          number: "45/204 · FR · 6",
         },
         {
           filters: "set6 rubis capacite impact-oui correction-aucune",
