Use HD images for Set 7 cards

--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
           name: "Hadès",
           version: "Débit d'enfer",
           sorting: "Hades - Debit d'enfer",
-          image: "images/007_052.png",
+          image: "images/007_052.jpg",
           incorrectText: "Lorsque vous jouez ce personnage, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages<mark>. Si vous le faites, choisissez un personnage coûtant 3 ou moins et bannissez-le</mark>.",
           correctedText: "Lorsque vous jouez ce personnage, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages <mark>pour choisir un personnage coûtant 3 ou moins et le bannir</mark>.",
           officialCorrection: "Aucune",
@@ -717,7 +717,7 @@
           name: "Madame Médusa",
           version: "Amoureuse des diamants",
           sorting: "Madame Medusa - Amoureuse des diamants",
-          image: "images/007_053.png",
+          image: "images/007_053.jpg",
           incorrectText: "Chaque fois que ce personnage est envoyé à l'aventure, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages<mark>. Si vous le faites, choisissez un joueur, il</mark> place les 3 premières cartes de sa pioche dans sa défausse.",
           correctedText: "Chaque fois que ce personnage est envoyé à l'aventure, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages<mark>pour choisir un joueur qui</mark> place les 3 premières cartes de sa pioche dans sa défausse.",
           officialCorrection: "Aucune",
@@ -728,7 +728,7 @@
           name: "Dolores Madrigal",
           version: "À portée d'oreille",
           sorting: "Dolores Madrigal - A portee d'oreille",
-          image: "images/007_078.png",
+          image: "images/007_078.jpg",
           incorrectText: "Chaque fois <mark>qu'un ou plusieurs de vos personnages chantent</mark> une chanson, choisissez un adversaire qui révèle sa main.",
           correctedText: "Chaque fois <mark>que l'un de vos personnages chante</mark> une chanson, choisissez un adversaire qui révèle sa main.",
           officialCorrection: "Aucune",
@@ -739,7 +739,7 @@
           name: "Ratigan",
           version: "Criminel néfaste",
           sorting: "Ratigan - Criminel nefaste",
-          image: "images/007_143.png",
+          image: "images/007_143.jpg",
           incorrectText: "<mark>Chaque fois que vous jouez une action, si ce personnage est épuisé</mark>, gagnez 1 éclat de Lore.",
           correctedText: "<mark>Tant que ce personnage est épuisé, chaque fois que vous jouez une action</mark>, gagnez 1 éclat de Lore.",
           officialCorrection: "Aucune",
