Fix quote characters

--- a/index.html
+++ b/index.html
@@ -704,8 +704,8 @@
         {
           filters: "set7 amethyste rubis capacite impact-oui correction-aucune",
           name: "Hadès",
-          version: "Débit d'enfer",
-          sorting: "Hades - Debit d'enfer",
+          version: "Débit d’enfer",
+          sorting: "Hades - Debit d’enfer",
           image: "images/007_052.jpg",
           incorrectText: "Lorsque vous jouez ce personnage, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages<mark>. Si vous le faites, choisissez un personnage coûtant 3 ou moins et bannissez-le</mark>.",
           correctedText: "Lorsque vous jouez ce personnage, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages <mark>pour choisir un personnage coûtant 3 ou moins et le bannir</mark>.",
@@ -726,8 +726,8 @@
         {
           filters: "set7 amethyste capacite impact-oui correction-aucune",
           name: "Dolores Madrigal",
-          version: "À portée d'oreille",
-          sorting: "Dolores Madrigal - A portee d'oreille",
+          version: "À portée d’oreille",
+          sorting: "Dolores Madrigal - A portee d’oreille",
           image: "images/007_078.jpg",
           incorrectText: "Chaque fois <mark>qu'un ou plusieurs de vos personnages chantent</mark> une chanson, choisissez un adversaire qui révèle sa main.",
           correctedText: "Chaque fois <mark>que l'un de vos personnages chante</mark> une chanson, choisissez un adversaire qui révèle sa main.",
