Remove quote characters from `sorting` fields

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           filters: "set1 emeraude capacite impact-oui correction-application correction-reimpression",
           name: "Cruella d’Enfer",
           version: "Cruelle Diablesse",
-          sorting: "Cruella d’Enfer - Cruelle Diablesse",
+          sorting: "Cruella d Enfer - Cruelle Diablesse",
           image: "images/001_072.jpg",
           incorrectText: "Lorsque ce personnage est <mark>banni via un défi</mark>, vous pouvez choisir un personnage que son propriétaire reprend en main.",
           correctedText: "Lorsque ce personnage est <mark>défié et banni</mark>, vous pouvez choisir un personnage que son propriétaire reprend en main.",
@@ -232,7 +232,7 @@
           filters: "set1 emeraude effet impact-oui correction-application correction-reimpression",
           name: "N’écoute que moi",
           version: "",
-          sorting: "N’ecoute que moi",
+          sorting: "N ecoute que moi",
           image: "images/001_095.jpg",
           incorrectText: "<mark>Renvoyez une carte personnage de sa défausse</mark> dans la main de son propriétaire.",
           correctedText: "<mark>Choisissez et renvoyez un personnage en jeu</mark> dans la main de son propriétaire.",
@@ -430,7 +430,7 @@
           filters: "set2 acier rappel impact-oui correction-aucune",
           name: "Le Prince",
           version: "N’abandonne jamais",
-          sorting: "Le Prince - N’abandonne jamais",
+          sorting: "Le Prince - N abandonne jamais",
           image: "images/002_195.jpg",
           incorrectText: "Lorsqu’il <mark>vous défie</mark>, un personnage adverse doit, <mark>si possible</mark>, choisir l’un de vos personnages avec Rempart.",
           correctedText: "Lorsqu'il <mark>défie l'un de vos personnages</mark>, un personnage adverse doit, <mark>s'il le peut</mark>, choisir l'un de vos personnages avec Rempart.",
@@ -573,7 +573,7 @@
           filters: "set3 acier capacite impact-non correction-application",
           name: "Île d’exil de Maui",
           version: "Rocher caché",
-          sorting: "Ile d’exil de Maui - Rocher cache",
+          sorting: "Ile d exil de Maui - Rocher cache",
           image: "images/003_202.jpg",
           incorrectText: "Les personnages sur ce lieu <mark>gagne</mark> Résistance +1.",
           correctedText: "Les personnages sur ce lieu <mark>gagnent</mark> Résistance +1.",
@@ -650,7 +650,7 @@
           filters: "set5 amethyste capacite impact-oui correction-aucune",
           name: "Palais de Glace d’Elsa",
           version: "Forteresse de solitude",
-          sorting: "Palais de Glace d’Elsa - Forteresse de solitude",
+          sorting: "Palais de Glace d Elsa - Forteresse de solitude",
           image: "images/005_067.jpg",
           incorrectText: "Lorsque vous jouez ce lieu, choisissez un personnage <mark>adverse</mark> épuisé. Tant que ce lieu est en jeu, ce personnage ne se redresse pas au début de chacun des tours de son propriétaire.",
           correctedText: "Lorsque vous jouez ce lieu, choisissez un personnage épuisé. Tant que ce lieu est en jeu, ce personnage ne se redresse pas au début de chacun des tours de son propriétaire.",
@@ -705,7 +705,7 @@
           filters: "set7 amethyste rubis capacite impact-oui correction-aucune",
           name: "Hadès",
           version: "Débit d’enfer",
-          sorting: "Hades - Debit d’enfer",
+          sorting: "Hades - Debit d enfer",
           image: "images/007_052.jpg",
           incorrectText: "Lorsque vous jouez ce personnage, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages<mark>. Si vous le faites, choisissez un personnage coûtant 3 ou moins et bannissez-le</mark>.",
           correctedText: "Lorsque vous jouez ce personnage, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages <mark>pour choisir un personnage coûtant 3 ou moins et le bannir</mark>.",
@@ -727,7 +727,7 @@
           filters: "set7 amethyste capacite impact-oui correction-aucune",
           name: "Dolores Madrigal",
           version: "À portée d’oreille",
-          sorting: "Dolores Madrigal - A portee d’oreille",
+          sorting: "Dolores Madrigal - A portee d oreille",
           image: "images/007_078.jpg",
           incorrectText: "Chaque fois <mark>qu'un ou plusieurs de vos personnages chantent</mark> une chanson, choisissez un adversaire qui révèle sa main.",
           correctedText: "Chaque fois <mark>que l'un de vos personnages chante</mark> une chanson, choisissez un adversaire qui révèle sa main.",
