Fix official correction for Divebomb
This should have been done in 3bdf21e9eb3b2266887c1ff4e8a8d301c72cc983.

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
           image: "images/003_128.jpg",
           incorrectText: "Bannissez l'un de vos personnages avec Combattant <mark>puis choisissez un personnage ayant moins de <img style=\"width: 1em;\" src=\"images/S.svg\" /> que lui et bannissez-le</mark>.",
           correctedText: "Bannissez l'un de vos personnages avec Combattant <mark>pour choisir un personnage ayant moins de <img style=\"width: 1em;\" src=\"images/S.svg\" /> que lui et le bannir</mark>.",
-          officialCorrection: "Corrigé sur l’application",
+          officialCorrection: "Aucune",
           number: "128/204 · FR · 3",
         },
         {
