Add Beast - Selfless Protector

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">58</span>/58 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">59</span>/59 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">58</span>/58 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">59</span>/59 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -405,6 +405,17 @@
           correctedText: "Choisissez l’un de vos personnages et piochez une carte pour chaque jeton Dommage sur lui, puis bannissez-le.",
           officialCorrection: "Aucune",
           number: "134/204 · FR · 2",
+        },
+        {
+          filters: "set2 acier capacite impact-oui correction-application",
+          name: "La Bête",
+          version: "Prêt à se sacrifier",
+          sorting: "La Bete - Pret a se sacrifier",
+          image: "images/002_172.jpg",
+          incorrectText: "Si des dommages sont infligés à l'un de vos personnages, placez-les sur ce personnage à la place.",
+          correctedText: "Si des dommages sont infligés à l'un de vos <mark>autres</mark> personnages, placez-les sur ce personnage à la place.",
+          officialCorrection: "Corrigé sur l’application",
+          number: "172/204 · FR · 2",
         },
         {
           filters: "set2 acier rappel impact-oui correction-aucune",
