--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">59</span>/59 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">60</span>/60 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">59</span>/59 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">60</span>/60 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -614,6 +614,17 @@
           correctedText: "<mark>Durant votre tour</mark>, tant qu’aucun autre personnage n'a été envoyé à l'aventure <mark>ce tour-ci</mark>, ce personnage gagne +3.",
           officialCorrection: "Aucune",
           number: "45/204 · FR · 4",
+        },
+        {
+          filters: "set4 emeraude capacite impact-non correction-aucune",
+          name: "Diablo",
+          version: "Messager dévoué",
+          sorting: "Diablo - Messager devoue",
+          image: "images/004_070.jpg",
+          incorrectText: "Tant que <mark>cette carte est épuisée</mark>, chaque fois qu'un adversaire pioche une carte durant son tour, vous pouvez piocher une carte.",
+          correctedText: "Tant que <mark>ce personnage est épuisé</mark>, chaque fois qu'un adversaire pioche une carte durant son tour, vous pouvez piocher une carte.",
+          officialCorrection: "Aucune",
+          number: "70/204 · FR · 4",
         },
         {
           filters: "set4 emeraude capacite impact-oui correction-aucune",
