Add Tramp - Street-Smart Dog

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">60</span>/60 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">61</span>/61 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">60</span>/60 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">61</span>/61 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -735,6 +735,17 @@
           correctedText: "Lorsque vous jouez cet objet, choisissez un personnage qui subit -1 <img style=\"width: 1em;\" src=\"images/S.svg\" /> <mark>pour le reste de ce tour</mark> pour chaque Objet Microrobots que vous avez en jeu.",
           officialCorrection: "Aucune",
           number: "167/204 · FR · 6",
+        },
+        {
+          filters: "set7 ambre emeraude capacite impact-oui correction-aucune",
+          name: "Clochard",
+          version: "Chien débrouillard",
+          sorting: "Clochard - Chien debrouillard",
+          image: "images/007_010.jpg",
+          incorrectText: "Lorsque vous jouez ce personnage, vous pouvez piocher une carte pour chaque autre personnage que vous avez en jeu<mark>. Ensuite</mark>, défaussez autant de cartes<mark> que vous en avez pioché</mark>.",
+          correctedText: "Lorsque vous jouez ce personnage, vous pouvez piocher une carte pour chaque autre personnage que vous avez en jeu,<mark> puis</mark> défaussez autant de cartes.",
+          officialCorrection: "Aucune",
+          number: "10/204 · FR · 7",
         },
         {
           filters: "set7 amethyste nom impact-oui correction-application",
