Add set 8 to filters

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
               <label class="btn btn-outline-dark text-nowrap" for="btn-check-set6">La Mer Azurite</label>
               <input type="checkbox" autocomplete="off" class="btn-check" id="btn-check-set7" data-filter=".set7">
               <label class="btn btn-outline-dark text-nowrap" for="btn-check-set7">L'Île d'Archazia</label>
+              <input type="checkbox" autocomplete="off" class="btn-check" id="btn-check-set8" data-filter=".set8">
+              <label class="btn btn-outline-dark text-nowrap" for="btn-check-set8">Le Règne de Jafar</label>
             </div>
             <h6>Correction officielle</h6>
             <div class="d-flex flex-wrap gap-2 mb-4 button-group">
