Narrow down incorrect text on Hades - Fast Talker

--- a/index.html
+++ b/index.html
@@ -766,8 +766,8 @@
           version: "Débit d’enfer",
           sorting: "Hades - Debit d enfer",
           image: "images/007_052.jpg",
-          incorrectText: "Lorsque vous jouez ce personnage, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages<mark>. Si vous le faites, choisissez un personnage coûtant 3 ou moins et bannissez-le</mark>.",
-          correctedText: "Lorsque vous jouez ce personnage, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages <mark>pour choisir un personnage coûtant 3 ou moins et le bannir</mark>.",
+          incorrectText: "Lorsque vous jouez ce personnage, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages<mark>. Si vous le faites, choisissez</mark> un personnage coûtant 3 ou moins et <mark>bannissez-le</mark>.",
+          correctedText: "Lorsque vous jouez ce personnage, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages <mark>pour choisir</mark> un personnage coûtant 3 ou moins et <mark>le bannir</mark>.",
           officialCorrection: "Aucune",
           number: "52/204 · FR · 7",
         },
