--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">61</span>/61 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">62</span>/62 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">61</span>/61 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">62</span>/62 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -803,6 +803,17 @@
           correctedText: "<mark>Tant que ce personnage est épuisé, chaque fois que vous jouez une action</mark>, gagnez 1 éclat de Lore.",
           officialCorrection: "Aucune",
           number: "143/204 · FR · 7",
+        },
+        {
+          filters: "set8 amethyste rubis capacite impact-oui correction-aucune",
+          name: "Madame Médusa",
+          version: "Partenaire perfide",
+          sorting: "Madame Medusa - Partenaire perfide",
+          image: "images/008_047.jpg",
+          incorrectText: "Lorsque vous jouez ce personnage, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages<mark>. Si vous le faites, choisissez</mark> un personnage coûtant 2 ou moins et <mark>renvoyez-le</mark> dans la main de son propriétaire.",
+          correctedText: "Lorsque vous jouez ce personnage, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages<mark> pour choisir</mark> un personnage coûtant 2 ou moins et <mark>le renvoyer</mark> dans la main de son propriétaire.",
+          officialCorrection: "Aucune",
+          number: "47/204 · FR · 8",
         },
       ];
 
