--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">62</span>/62 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">63</span>/63 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">62</span>/62 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">63</span>/63 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -814,6 +814,17 @@
           correctedText: "Lorsque vous jouez ce personnage, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages<mark> pour choisir</mark> un personnage coûtant 2 ou moins et <mark>le renvoyer</mark> dans la main de son propriétaire.",
           officialCorrection: "Aucune",
           number: "47/204 · FR · 8",
+        },
+        {
+          filters: "set8 amethyste rubis capacite impact-oui correction-aucune",
+          name: "Hadès",
+          version: "Tyran impitoyable",
+          sorting: "Hades - Tyran impitoyable",
+          image: "images/008_048.jpg",
+          incorrectText: "Lorsque vous jouez ce personnage et chaque fois qu'il est envoyé à l'aventure, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages<mark>. Si vous le faites, piochez</mark> 2 cartes.",
+          correctedText: "Lorsque vous jouez ce personnage et chaque fois qu'il est envoyé à l'aventure, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages<mark> pour piocher</mark> 2 cartes.",
+          officialCorrection: "Aucune",
+          number: "48/204 · FR · 8",
         },
       ];
 
