Add Prince John - Fraidy-Cat

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">64</span>/64 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">65</span>/65 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">64</span>/64 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">65</span>/65 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -836,6 +836,17 @@
           correctedText: "Lorsque vous jouez ce personnage, vous pouvez choisir un autre de vos personnages et lui infliger 2 dommages<mark> pour que</mark> le personnage choisi gagne Offensif +1 et \"Lorsque ce personnage est banni via un défi, renvoyez-le dans votre main.\" pour le reste de ce tour.",
           officialCorrection: "Aucune",
           number: "70/204 · FR · 8",
+        },
+        {
+          filters: "set8 rubis capacite impact-non correction-aucune",
+          name: "Prince Jean",
+          version: "Poule mouillée",
+          sorting: "Prince Jean - Poule mouillee",
+          image: "images/008_146.jpg",
+          incorrectText: "Chaque fois <mark>que votre</mark> adversaire joue un personnage, infligez 1 dommage à ce personnage-ci.",
+          correctedText: "Chaque fois <mark>qu'un</mark> adversaire joue un personnage, infligez 1 dommage à ce personnage-ci.",
+          officialCorrection: "Aucune",
+          number: "146/204 · FR · 8",
         },
       ];
 
